[package]
name = "u-siem-opnsense"
version = "0.0.4"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Library to be used to build a custom SIEM with the framework uSIEM"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs","opnsense","firewall"]
categories = ["security"]
edition = "2018"

[lib]
name = "usiem_opnsense"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = { version = "0.5" }
u-siem = {version = "0.0"}
chrono = "0.4"